--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "ifs2014",
+  "name": "ifs2014-admin",
   "description": "Mapping application admin.",
   "version": "0.0.1",
+  "main": "app.js",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/garethfoote/ifs2014-admin.git"
+  },
+   "author": "garethfoote",
   "dependencies": {
     "express": "3.x",
     "hbs": "*",
