--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "version": "0.0.1",
   "main": "web.js",
   "repository": {
-      "type": "git",
-      "url": "https://github.com/garethfoote/ifs2014-admin.git"
+    "type": "git",
+    "url": "https://github.com/garethfoote/ifs2014-admin.git"
   },
-   "author": "garethfoote",
+  "author": "garethfoote",
   "dependencies": {
     "express": "3.x",
     "hbs": "*",
     "socket.io": "~0.9.16",
     "tingodb": "~0.1.18",
-    "q": "~1.0.0"
+    "q": "~1.0.0",
+    "mongodb": "~1.3.23"
   },
   "engines": {
-      "node": "0.10.x"
+    "node": "0.10.x"
   }
 }
