--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "socket.io": "~0.9.16",
     "tingodb": "~0.1.18",
     "q": "~1.0.0",
-    "mongodb": "~1.3.23"
+    "mongodb": "~1.3.23",
+    "cors": "~2.1.1"
   },
   "engines": {
     "node": "0.10.x"
