--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "tingodb": "~0.1.18",
     "q": "~1.0.0",
     "mongodb": "~1.3.23",
-    "cors": "~2.1.1"
+    "cors": "~2.1.1",
+    "passport": "~0.1.18",
+    "passport-local": "~0.1.6",
+    "connect-flash": "~0.1.1"
   },
   "engines": {
     "node": "0.10.x"
