--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "~2.1.1",
     "passport": "~0.1.18",
     "passport-local": "~0.1.6",
-    "connect-flash": "~0.1.1"
+    "connect-flash": "~0.1.1",
+    "mtwitter": "~1.5.2"
   },
   "engines": {
     "node": "0.10.x"
